
* 1603060693
 - adding /cdn/status entry point.
* 1602441772
 - adding timout parameter on localtest.
* 1594541378
 - fix btoa error in error log.
 - fix out of offset error message on some EDNS record.
* 1592043604
 - Avoid IPV6 alert on cdnbox without ipv6.
 - Don't Detect/update IP changes if node is cname.
* 1590944563
 - Fix the 127.0.1.1 problem (which masks IPv6 under systemd resolver) via reverse resolution of global non local IPv6 address.

* 1590940535
 - Upgrade to NodeJS 12.

* 1569940093
 - Fix score problem when default is off.

* 1569703889
 - Detect and update when remote node's IP change via Probes.
 - Fix the 127.0.1.1 problem via whoami protocol.

* 1569225035
 - Add bw receive (now Trans and Recv in console).

* 1568660388
 - Add a separate probe for IPv6.

* 1554800344
 - Introducing TCP RTT metric collection.

* 1553472380
 - Fix JSON errors messages.

* 1553261389
 - additional records on A, AAAA and NS

* 1552559874
 - fix "cdnbox updated" JSON syntax.

* 1552142871
 - add tls ticket keys for haproxy.

* 1546777819
 - correct undefined issue when bind9 start slowly at reboot.

* 1544982708
 - changes for Node 10 compliance.
 - Probe process now auto restarts.
 - randomly run probes to avoid collision.

* 1540824449
 - every node should have 1539537083 before to migrate to this release, because  /cdn/states is removed.
 - probes use now a separate process to avoid busy event loop lag.

* 1539537083:
 - getremovebw over http has been removed. /cdn/states is now deprecated and will be removed next.
 - discovering which node we are is based on DNS IPv4 address. This was done by looking for IPv4 address on each network
   interface. Unfortunately, these addresses are not present on some VM like those of AWS or GCP. This previously was
   fixed by adding the external IP to the loopback interface, but this leads to get loopback bandwith instead of the right