@@ -95,7 +95,6 @@ const httpserver = http.createServer((req, res) => {
       } else if (req.url.startsWith("/cdn/status")) {
         res.writeHead(200, { "Content-Type": "application/json" });
         cdnbox_status(req,res);
-        res.end('');
 
       // UI (raw).
       } else if (req.url.startsWith("/cdn/cdnboxes")) {
@@ -419,7 +418,7 @@ function verifytoken(req) {
     return res[0] === 'token=' + tokentime + '-' + hash.digest('hex');
 }
 
-function cdnbox_status(req,res) {
+async function cdnbox_status(req,res) {
   var deltanetcount = 0, deltanetrecvcount = 0;
   if (cdnbox_status.memnetcount != undefined) {
     deltanetcount = cdnboxStates.local.netcount - cdnbox_status.memnetcount;
@@ -445,9 +444,22 @@ function cdnbox_status(req,res) {
       '"inbound": ' + deltanetrecvcount + ',' +
       '"outbound": ' + deltanetcount + ',' +
       '"status": "' + cdnboxStates.local.status + '"' +
-    '}');
+    '');
+    if (cdnboxStates.local.config.varnishmetrics && cdnboxStates.config.varnishmetricsoutput === "status") {
+      cdnboxStates.getvarnishmetrics().then(function (buff) {
+        res.write(buff + '}');
+        res.end();
+      }, function () {
+        res.write('}');
+        res.end();
+      })
+    } else {
+      res.write('}');
+      res.end();
+    }
   } catch (e) {
     console.error(e);
+    res.end('');
   }
 }
 
