@@ -98,6 +98,7 @@ cdnboxStates.loadconfig = function () {
   });
   if (lconfig.states === undefined) { lconfig.states = { "penalgdown": 120 }; } 
   if (lconfig.clustersecret === undefined) { lconfig.clustersecret = lconfig.httpserver.authorization; }
+  if (lconfig.varnishmetricsoutput === undefined) { lconfig.varnishmetricsoutput = "log"; }
 }
 
 cdnboxStates.loadconfig();
@@ -638,7 +639,9 @@ function testCDNBoxes() {
   // localtests
   if (cdnboxStates.local.config.localtests) dolocaltests(cdnboxStates.local);
   // get metrics
-  if (cdnboxStates.local.config.varnishmetrics) getvarnishmetrics();
+  if (cdnboxStates.local.config.varnishmetrics && cdnboxStates.config.varnishmetricsoutput === "log") {
+    cdnboxStates.getvarnishmetrics();
+  }
   console.log(' "type":"memory",' + JSON.stringify(process.memoryUsage()).replace(/[{}]/g, ''));
 }
 
@@ -677,39 +680,50 @@ function dolocaltests(cdnboxState) {
   }
 }
 
-function getvarnishmetrics() {
+cdnboxStates.getvarnishmetrics = function() {
   if (cdnboxStates.varnishmetrics === undefined) { cdnboxStates.varnishmetrics = {}; }
-  var child = childProcess.execFile('varnishstat', ['-j', '-1'], (error, stdout, stderr) => {
-    if (error) {
-      console.error(error);
-    } else {
-      try {
-        var vconf = cdnboxStates.config.varnishmetrics;
-        var keys = Object.keys(vconf),
-            vstat = JSON.parse(stdout),
-            buff = ' "type":"varnish"';
-        var currenttime = Date.now();
-        var delta = (currenttime - (cdnboxStates.varnishmetrics.lasttime?cdnboxStates.varnishmetrics.lasttime:0)) / 1000;
-        cdnboxStates.varnishmetrics.lasttime = currenttime;
-        for (var i = 0; i < keys.length; i++) {
-          switch (vstat[vconf[keys[i]]].flag) {
-            case 'c':
-              if (cdnboxStates.varnishmetrics[keys[i]] !== undefined) {
-                buff += ',"' + keys[i] + '": ' +
-                    Math.round((vstat[vconf[keys[i]]].value - cdnboxStates.varnishmetrics[keys[i]]) / delta); 
+  return new Promise((resolve, reject) => {
+    var child = childProcess.execFile('varnishstat', ['-j', '-1'], (error, stdout, stderr) => {
+      if (error) {
+        console.error(error);
+        reject(error);
+      } else {
+        var i,
+	    vconf = cdnboxStates.config.varnishmetrics,
+            vconf_keys = Object.keys(vconf);
+        try {
+          var vstat = JSON.parse(stdout), buff = '', currenttime = Date.now();
+          if (vstat.counters !== undefined) { vstat = vstat.counters; }
+          var delta = (currenttime - (cdnboxStates.varnishmetrics.lasttime?cdnboxStates.varnishmetrics.lasttime:0)) / 1000;
+          cdnboxStates.varnishmetrics.lasttime = currenttime;
+          for (i = 0; i < vconf_keys.length; i++) {
+            if (vstat[vconf[vconf_keys[i]]]) {
+              switch (vstat[vconf[vconf_keys[i]]].flag) {
+                case 'c':
+                  if (cdnboxStates.varnishmetrics[vconf_keys[i]] !== undefined) {
+                    buff += ',"' + vconf_keys[i] + '": ' +
+                        Math.round((vstat[vconf[vconf_keys[i]]].value - cdnboxStates.varnishmetrics[vconf_keys[i]]) / delta); 
+                  }
+                  cdnboxStates.varnishmetrics[vconf_keys[i]] = vstat[vconf[vconf_keys[i]]].value;
+                  break;
+                case 'g':
+                  buff += ',"' + vconf_keys[i] + '": ' + vstat[vconf[vconf_keys[i]]].value; 
               }
-              cdnboxStates.varnishmetrics[keys[i]] = vstat[vconf[keys[i]]].value;
-              break;
-            case 'g':
-              buff += ',"' + keys[i] + '": ' + vstat[vconf[keys[i]]].value; 
+            } else {
+              buff += ',"' + vconf_keys[i] + '": -1';
+            }
           }
+          console.log('"type":"varnish"' + buff);
+	  resolve(buff);
+        } catch (err) {
+          console.error(err);
+          logerror('"error": "varnishmetrics: ' + err.message + 'on ' + vconf[vconf_keys[i]] +
+		   ' on ' + cdnboxStates.local.config.name + '"');
+	  reject(err);
         }
-        console.log(buff);
-      } catch (err) {
-        console.error(err);
       }
-    }
-  });
+    });
+  })
 }
 
 // initializing mailer
